@@ -1,2 +1,4 @@
 kJqLdcfWXEZDT
 Thu Nov 27 02:02:10 AM CET 2025: Изменения в ветке feature-branch-615
+b5KboClS7czNESZa5WMhTcidT8sEz8np41LSfrnrxtJpF3rn
+Thu Nov 27 02:18:47 AM CET 2025: Изменения в ветке feature-branch-665
